--- a/css/estilos.css
+++ b/css/estilos.css
@@ -355,10 +355,13 @@ footer{
 nav > a{
     margin-left: 5px;
     font-size:15px;
+    }
+    .cont-extra{
+    font-size: 15px;
 }
-    
    .contenedor-ftexto p{ 
     font-size: 15px;
     text-align: center;
 }
+    
 }    
