--- a/css/estilos.css
+++ b/css/estilos.css
@@ -352,6 +352,10 @@ footer{
 }
 
 @media screen and (max-width:500px){
+
+header .textos-header {
+        font-size: 25px;
+        }
 nav > a{
     margin-left: 5px;
     font-size:15px;
