--- a/css/estilos.css
+++ b/css/estilos.css
@@ -364,7 +364,12 @@ nav > a{
     font-size: 15px;
     }
 .contenedor-ftexto p{  
-    font-size: 5px;
+    font-size: 9px;
     text-align: center;
     }
+    
+.contenedor-ftexto h4{
+    font-size: 12px;
+    }
+  
 }    
